Fixes various issues with the code examples in some error messages:
* Has fixes for openactive/data-model-validator#242 and openactive/data-model-validator#238
* Fixes openactive/data-model-validator#235
* Fixes openactive/data-model-validator#243
* Fixes openactive/data-model-validator#237
* Fixes openactive/data-model-validator#240 - horizontal scroll in examples

--- a/src/client/scss/app.scss
+++ b/src/client/scss/app.scss
@@ -37,8 +37,7 @@ html, body, #app-container {
   }
 }
 
-pre code.hljs code {
-  border: none;
+pre code.hljs {
   font-family: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
-  padding: 0;
+  pointer-events: initial;
 }
